--- a/Chatbot/src/App.css
+++ b/Chatbot/src/App.css
@@ -1,5 +1,14 @@
 .generale {
   max-width: 600px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body {
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
